<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewHomeScreen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textTitleHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/title_home_screen"
            android:textColor="@color/color_pastel_green"
            android:textSize="@dimen/sp_32"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagePoster"
            android:layout_width="@dimen/dp_340"
            android:layout_height="@dimen/dp_270"
            android:layout_marginStart="@dimen/dp_20"
            android:contentDescription="@string/title_picture_exercise"
            android:scaleType="fitCenter"
            android:src="@drawable/image_poster_home_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleHome" />

        <Button
            android:id="@+id/buttonContinueChallenge"
            android:layout_width="@dimen/dp_245"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@color/color_pastel_green"
            android:text="@string/title_continue_challenge"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePoster" />

        <Button
            android:id="@+id/buttonMyProcess"
            android:layout_width="@dimen/dp_245"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/color_carnation"
            android:text="@string/title_my_process"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonContinueChallenge" />

        <ImageView
            android:layout_width="@dimen/dp_128"
            android:layout_height="@dimen/dp_128"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@drawable/image_vn_chibi"
            android:contentDescription="@string/title_picture_u23"
            app:layout_constraintStart_toEndOf="@+id/buttonContinueChallenge"
            app:layout_constraintTop_toBottomOf="@+id/imagePoster" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_28"
            android:text="@string/title_answer_home_screen"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMyProcess" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
